@@ -38,6 +38,7 @@ Patches and other contributions from:
     Al Tobey <tobert@gmail.com>
     Ronald van den Blink <ronald@a61.nl>
     Thomas Uhde <thomas.uhde@KabelDeutschland.de>
+    John L. Villalovos <john@sodarock.com>
     Tim Verhoeven <tim.verhoeven.be@gmail.com>
 
     [...send patches to get your name here...]
