@@ -120,9 +120,9 @@ class Image(item.Item):
 	without a kickstart is *usually* not a good idea).
 	"""
         if self.file is None or self.file == '':
-            raise CX(_("no file specified"))
+            raise CX(_("image has file specified"))
         if self.name is None or self.name == '':
-            raise CX(_("no name specified"))
+            raise CX(_("image has no name specified"))
         return True
 
     # FIXME: add virt parameters here as needed
